# bicicletavoadora

./: Makefile  README.md  docker-compose.yml
.github/workflows/: main.yml  test-backend.yml  test-frontend.yml  test.yml
backend/: Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: main.py  test_main.py
frontend/: Makefile  README.md  jest.config.json  package-lock.json  package.json  svelte.config.js
frontend/src/: global.d.ts
frontend/src/components/: Header.svelte
frontend/src/lib/: variables.ts
frontend/src/middleware/: monitoring.js
frontend/src/routes/: __layout.svelte  index.spec.js  index.svelte  index.test.ts
frontend/src/services/: Api.js  bicicletavoadora.js
frontend/src/stores/: bicicletavoadora.js
